Fixing layout issues

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ padding: 5px;
 
 .thumbnail {
 width: 200px;
-height: 150px;
+/*height: 150px;*/
 margin-left: auto;
 margin-right: auto;
 }
@@ -101,7 +101,7 @@ color: white;
 
 #resourcenavbar {
 width: 400px;
-height: 150px;
+/*height: 150px;*/
 margin-left: auto;
 margin-right: auto;
 margin-bottom: 100px;
@@ -109,7 +109,7 @@ margin-bottom: 100px;
 
 .resourcenav {
 width: 200px;
-height: 150px;
+/*height: 150px;*/
 float: left;
 display: none;
 }
